--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -49,7 +49,8 @@
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "react-dom": "catalog:"
   },
   "dependencies": {
     "clsx": "catalog:",
