--- a/packages/ui/radio-button/package.json
+++ b/packages/ui/radio-button/package.json
@@ -11,8 +11,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "dist/index.js",
-        "types": "dist/index.d.ts"
+        "default": "./dist/index.js",
+        "types": "./dist/index.d.ts"
       }
     }
   },
@@ -52,7 +52,8 @@
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "react-dom": "catalog:"
   },
   "dependencies": {
     "clsx": "catalog:",
