--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "lint": {
+        "dependsOn": ["^lint"]
+    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
