--- a/features/login/package.json
+++ b/features/login/package.json
@@ -10,22 +10,26 @@
   ],
   "exports": {
     ".": {
-      "import": "src/index.ts",
-      "require": "src/index.ts"
+      "import": {
+        "default": "dist/index.js",
+        "types": "src/index.ts"
+      }
     }
   },
-  "module": "./src/index.ts",
-  "types": "./src/index.ts",
   "type": "module",
   "scripts": {
+    "build:tsc": "tsc",
+    "check-type": "tsc --noEmit",
     "build:css": "tailwindcss -i src/style.css -o dist/style.css",
     "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
+    "dev:build:tsc": "tsc --watch --noEmit --preserveWatchOutput",
     "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
     "dev:storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
-    "dev": "concurrently \"npm:dev:*\""
+    "dev": "concurrently \"npm:dev:*\"",
+    "build": "concurrently \"npm:build:*\""
   },
   "keywords": [],
   "author": "",
@@ -34,25 +38,22 @@
     "@spp/eslint-config": "workspace:^",
     "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@spp/ui-loader": "workspace:^",
-    "@spp/ui-overlay": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
-    "@types/react": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
     "tailwindcss": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:"
+    "vitest": "catalog:",
+    "typescript": "catalog:"
   },
   "dependencies": {
     "clsx": "catalog:",
-    "jotai": "catalog:",
     "react": "catalog:"
   }
 }
