--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -33,3 +33,6 @@ catalog:
   "sinon": "18.0.0"
   "@types/sinon": "^17.0.3"
   typescript: "5.3.3"
+  firebase-tools: "^13.1.0"
+  firebase: "^10.7.2"
+
