--- a/features/authenticator/package.json
+++ b/features/authenticator/package.json
@@ -2,8 +2,7 @@
   "name": "@spp/feature-authenticator",
   "version": "1.0.0",
   "description": "",
-  "sideEffects": [
-  ],
+  "sideEffects": [],
   "files": [
     "./dist/"
   ],
@@ -18,6 +17,12 @@
       "import": {
         "default": "dist/firebase.js",
         "types": "src/firebase.ts"
+      }
+    },
+    "./memory.js": {
+      "import": {
+        "default": "dist/memory.js",
+        "types": "src/memory.ts"
       }
     }
   },
@@ -47,6 +52,7 @@
   },
   "dependencies": {
     "@spp/shared-domain": "workspace:^",
-    "firebase": "catalog:"
+    "firebase": "catalog:",
+    "uuid": "^9.0.1"
   }
 }
