--- a/features/domain-infra/package.json
+++ b/features/domain-infra/package.json
@@ -2,9 +2,7 @@
   "name": "@spp/feature-domain-infra",
   "version": "1.0.0",
   "description": "",
-  "sideEffects": [
-    "./dist/style.css"
-  ],
+  "sideEffects": [],
   "files": [
     "./dist/"
   ],
@@ -20,14 +18,10 @@
   "scripts": {
     "build:tsc": "tsc",
     "check-type": "tsc --noEmit",
-    "build:css": "tailwindcss -i src/style.css -o dist/style.css",
-    "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
     "dev:build:tsc": "tsc --watch --noEmit --preserveWatchOutput",
     "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "dev:storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
     "dev": "concurrently \"npm:dev:*\"",
     "build": "concurrently \"npm:build:*\""
   },
@@ -38,17 +32,10 @@
     "@spp/eslint-config": "workspace:^",
     "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@storybook/addon-controls": "catalog:",
-    "@storybook/cli": "catalog:",
-    "@storybook/react": "catalog:",
-    "@storybook/react-vite": "catalog:",
-    "@testing-library/react": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "firebase-tools": "catalog:",
-    "jsdom": "catalog:",
-    "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
@@ -56,8 +43,6 @@
   "dependencies": {
     "@spp/shared-basic": "workspace:^",
     "@spp/shared-domain": "workspace:^",
-    "clsx": "catalog:",
-    "firebase": "catalog:",
-    "react": "catalog:"
+    "firebase": "catalog:"
   }
 }
