--- a/features/domain-infra/package.json
+++ b/features/domain-infra/package.json
@@ -29,14 +29,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@firebase/rules-unit-testing": "catalog:",
     "@spp/eslint-config": "workspace:^",
     "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "firebase-tools": "catalog:",
     "typescript": "catalog:",
+    "uuid": "^9.0.1",
     "vite": "catalog:",
     "vitest": "catalog:"
   },
