--- a/features/domain-infra/package.json
+++ b/features/domain-infra/package.json
@@ -40,6 +40,7 @@
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "firebase-tools": "catalog:",
+    "immer": "^10.0.3",
     "typescript": "catalog:",
     "uuid": "^9.0.1",
     "vite": "catalog:",
