chore: use ui-dialog

--- a/features/login/package.json
+++ b/features/login/package.json
@@ -50,6 +50,7 @@
     "vitest": "catalog:"
   },
   "dependencies": {
+    "@spp/ui-dialog": "workspace:^",
     "@spp/ui-loader": "workspace:^",
     "@spp/ui-overlay": "workspace:^",
     "@types/react": "catalog:",
