--- a/features/login/package.json
+++ b/features/login/package.json
@@ -40,6 +40,7 @@
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
+    "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -50,6 +51,7 @@
     "vitest": "catalog:"
   },
   "dependencies": {
+    "@spp/infra-authenticator": "workspace:^",
     "@spp/ui-dialog": "workspace:^",
     "@spp/ui-loader": "workspace:^",
     "@spp/ui-overlay": "workspace:^",
