fix: use variant for loader

--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -43,13 +43,14 @@
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
+    "react-dom": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:",
-    "react-dom": "catalog:"
+    "vitest": "catalog:"
   },
   "dependencies": {
+    "@spp/shared-color-variant": "workspace:^",
     "clsx": "catalog:",
     "react": "catalog:"
   }
