--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,40 +1,39 @@
 packages:
   - 'packages/**/*'
   - 'configs/**/*'
-  - 'app'
   - 'features/**/*'
   - 'tests/**/*'
 
 catalog:
   clsx: 2.1.1
-  vite: 5.0.12
-  vitest: 1.2.2
-  "@vitejs/plugin-react": 4.2.1
-  jsdom: 24.0.0
-  "@testing-library/react": 14.1.2
+  vite: 5.4.6
+  vitest: 2.1.1
+  "@vitejs/plugin-react": 4.3.1
+  jsdom: 25.0.0
+  "@testing-library/react": 16.0.1
   react: 18.3.1
   react-dom: 18.3.1
-  "@storybook/addon-controls": "8.2.0"
-  "@storybook/cli": "8.2.0"
-  "@storybook/react": "8.2.0"
-  "@storybook/react-vite": "8.2.0"
-  tailwindcss: 3.4.10
-  "eslint": "^9.9.0"
+  "@storybook/addon-controls": "^8.3.1"
+  "@storybook/cli": "^8.3.1"
+  "@storybook/react": "^8.3.1"
+  "@storybook/react-vite": "^8.3.1"
+  tailwindcss: 3.4.12
+  "eslint": "^9.10.0"
   "eslint-config-prettier": "^9.1.0"
-  "eslint-plugin-react": "^7.35.0"
-  "eslint-plugin-unused-imports": "^4.1.3"
-  "typescript-eslint": "^8.1.0"
-  "concurrently": "8.2.2"
+  "eslint-plugin-react": "^7.36.1"
+  "eslint-plugin-unused-imports": "^4.1.4"
+  "typescript-eslint": "^8.6.0"
+  "concurrently": "9.0.1"
   "jotai": "2.9.3"
-  "@types/react": "^18.2.48"
+  "@types/react": "^18.3.7"
   "@types/react-dom": "^18.2.18"
   "@types/react-router": "^5.1.20"
   "@types/react-router-dom": "^5.3.3"
   "@types/react-transition-group": "^4.4.10"
-  "sinon": "18.0.0"
+  "sinon": "19.0.2"
   "@types/sinon": "^17.0.3"
-  typescript: "5.3.3"
-  firebase-tools: "^13.1.0"
-  firebase: "^10.7.2"
+  typescript: "5.6.2"
+  firebase-tools: "^13.17.0"
+  firebase: "^10.13.2"
   "@firebase/rules-unit-testing": "^3.0.1"
   '@dotenvx/dotenvx': "^1.14.1"
