--- a/packages/shared-logic/array/package.json
+++ b/packages/shared-logic/array/package.json
@@ -9,12 +9,12 @@
   "exports": {
     ".": {
       "import": {
-        "default": "./dist/index.js",
-        "types": "./dist/index.d.ts"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     }
   },
-    "scripts": {
+  "scripts": {
     "build": "tsc",
     "check-type": "tsc --noEmit",
     "dev:build": "tsc --watch --noEmit",
