--- a/features/login/package.json
+++ b/features/login/package.json
@@ -8,8 +8,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "dist/index.js",
-        "types": "src/index.ts"
+        "types": "src/index.ts",
+        "default": "dist/index.js"
       }
     }
   },
