--- a/packages/shared-logic/use-case/package.json
+++ b/packages/shared-logic/use-case/package.json
@@ -9,8 +9,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "./dist/index.js",
-        "types": "./dist/index.d.ts"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     }
   },
