--- a/packages/ui/loader/package.json
+++ b/packages/ui/loader/package.json
@@ -5,8 +5,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "./dist/index.js",
-        "types": "./dist/index.d.ts"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     }
   },
