--- a/features/login/package.json
+++ b/features/login/package.json
@@ -54,6 +54,7 @@
     "@spp/infra-authenticator": "workspace:^",
     "@spp/shared-color-variant": "workspace:^",
     "@spp/shared-domain": "workspace:^",
+    "@spp/shared-hook-facade": "workspace:^",
     "@spp/ui-button-style": "workspace:^",
     "@spp/ui-dialog": "workspace:^",
     "@spp/ui-loader": "workspace:^",
