--- a/features/login/package.json
+++ b/features/login/package.json
@@ -62,6 +62,7 @@
     "@types/react": "catalog:",
     "clsx": "catalog:",
     "jotai": "^2.10.0",
-    "react": "catalog:"
+    "react": "catalog:",
+    "react-router-dom": "catalog:"
   }
 }
