--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ catalog:
   "@testing-library/react": 16.0.1
   react: 18.3.1
   react-dom: 18.3.1
+  react-router-dom: "^6.26.2"
   "@storybook/addon-controls": "^8.3.1"
   "@storybook/cli": "^8.3.1"
   "@storybook/react": "^8.3.1"
