feat: add signup page

--- a/features/login/package.json
+++ b/features/login/package.json
@@ -41,10 +41,12 @@
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "^14.5.2",
+    "@types/sinon": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
+    "sinon": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
@@ -52,6 +54,7 @@
   },
   "dependencies": {
     "@spp/infra-authenticator": "workspace:^",
+    "@spp/shared-app-url": "workspace:^",
     "@spp/shared-color-variant": "workspace:^",
     "@spp/shared-domain": "workspace:^",
     "@spp/shared-hook-facade": "workspace:^",
