chore: fix storybook building

--- a/features/login/package.json
+++ b/features/login/package.json
@@ -46,6 +46,7 @@
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
+    "react-dom": "catalog:",
     "sinon": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
