feat: implement story

--- a/features/game/package.json
+++ b/features/game/package.json
@@ -57,8 +57,11 @@
     "@spp/infra-domain": "workspace:^",
     "@spp/shared-app-url": "workspace:^",
     "@spp/shared-domain": "workspace:^",
+    "@spp/shared-hook-facade": "workspace:^",
     "@spp/shared-use-case": "workspace:^",
+    "@spp/ui-button-style": "workspace:^",
     "@spp/ui-dialog": "workspace:^",
+    "@spp/ui-loader": "workspace:^",
     "clsx": "catalog:",
     "jotai": "^2.10.0",
     "react": "catalog:",
