fix: add test case for game creator

--- a/features/game/package.json
+++ b/features/game/package.json
@@ -47,6 +47,7 @@
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
+    "react-dom": "catalog:",
     "sinon": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:",
