fix: implementations for user estimations

--- a/features/voting/package.json
+++ b/features/voting/package.json
@@ -55,6 +55,8 @@
     "vitest": "catalog:"
   },
   "dependencies": {
+    "@spp/ui-icon": "workspace:^",
+    "@spp/ui-skeleton": "workspace:^",
     "clsx": "catalog:",
     "react": "catalog:"
   }
