chore: add cache to storybook output

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,9 @@
     },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "outputs": [
+        "dist/**",
+        "storybook-static/**" ]
     },
     "check-type": {
       "dependsOn": ["^check-type"]
