--- a/packages/infra/authenticator/package.json
+++ b/packages/infra/authenticator/package.json
@@ -34,8 +34,8 @@
     "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "dev": "concurrently \"npm:dev:*\"",
-    "build": "concurrently \"npm:build:*\""
+    "dev": "concurrently \"pnpm:dev:*\"",
+    "build": "concurrently \"pnpm:build:*\""
   },
   "keywords": [],
   "author": "",
