chore: enable raw-mode to handle input in dev mode

--- a/app/package.json
+++ b/app/package.json
@@ -8,12 +8,12 @@
     "dev:vite": "vite",
     "dev:tsc": "tsc --watch",
     "dev:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
-    "dev": "concurrently --handle-input \"pnpm:dev:*\"",
+    "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "ci": "CI=true firebase emulators:exec --ui 'npx vite'",
     "dev:emulators": "firebase emulators:start --import ./misc/local",
     "build:bundle": "NODE_ENV=production vite build",
     "build:css": "tailwindcss -i public/static/css/root.css -o dist/static/css/root.css",
-    "build": "concurrently \"pnpm:dev:*\"",
+    "build": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "deploy:preview": "firebase hosting:channel:deploy preview_name",
     "deploy:production": "firebase deploy",
     "publish:preview": "pnpm run build && pnpm run deploy:preview",
