--- a/packages/shared-logic/get-pnpm-root/package.json
+++ b/packages/shared-logic/get-pnpm-root/package.json
@@ -15,7 +15,7 @@
     "check-type": "tsc --noEmit",
     "dev:build": "tsc --watch --noEmit --preserveWatchOutput",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "dev": "concurrently \"pnpm:dev:*\""
+    "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\""
   },
   "keywords": [],
   "author": "",
