--- a/packages/ui/button-style/package.json
+++ b/packages/ui/button-style/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
     "dev:storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
-    "dev": "concurrently \"pnpm:dev:*\"",
+    "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "build": "concurrently \"pnpm:build:*\""
   },
   "keywords": [],
