--- a/features/voting/package.json
+++ b/features/voting/package.json
@@ -56,11 +56,14 @@
   },
   "dependencies": {
     "@spp/shared-color-variant": "workspace:^",
+    "@spp/shared-domain": "workspace:^",
+    "@spp/shared-use-case": "workspace:^",
     "@spp/ui-button-style": "workspace:^",
     "@spp/ui-icon": "workspace:^",
     "@spp/ui-skeleton": "workspace:^",
     "@spp/ui-toggle-button": "workspace:^",
     "clsx": "catalog:",
+    "jotai": "^2.10.0",
     "react": "catalog:"
   }
 }
