[wip] feat: implement atom for voting

--- a/features/voting/package.json
+++ b/features/voting/package.json
@@ -55,6 +55,7 @@
     "vitest": "catalog:"
   },
   "dependencies": {
+    "@spp/feature-login": "workspace:^",
     "@spp/shared-color-variant": "workspace:^",
     "@spp/shared-domain": "workspace:^",
     "@spp/shared-use-case": "workspace:^",
