refactor: use voting/voter in use case

--- a/packages/shared-logic/use-case/package.json
+++ b/packages/shared-logic/use-case/package.json
@@ -39,6 +39,7 @@
     "vitest": "catalog:"
   },
   "dependencies": {
-    "@spp/shared-domain": "workspace:^"
+    "@spp/shared-domain": "workspace:^",
+    "@spp/shared-type-util": "workspace:^"
   }
 }
