--- a/packages/shared-logic/get-pnpm-root/package.json
+++ b/packages/shared-logic/get-pnpm-root/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
+    "@types/node": "^22.5.5",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "typescript": "catalog:",
