chore: add command to build css

--- a/packages/ui/icon/package.json
+++ b/packages/ui/icon/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "check-type": "tsc --noEmit",
     "build:tsc": "tsc",
+      "build:css":"tailwindcss -i src/style.css -o dist/style.css",
     "dev:build:tsc": "tsc --watch --noEmit",
     "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
     "test": "vitest run",
