--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "devDependencies": {
     "plop": "^4.0.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0"
   },
   "dependencies": {
     "turbo": "^2.1.2"
