--- a/packages/ui/dialog/package.json
+++ b/packages/ui/dialog/package.json
@@ -18,8 +18,6 @@
     "check-type": "tsc --noEmit",
     "build:tsc": "tsc",
     "dev:build:tsc": "tsc --watch --noEmit --preserveWatchOutput",
-    "build:css": "tailwindcss -i src/style.css -o dist/style.css",
-    "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
     "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
@@ -33,7 +31,6 @@
   "license": "ISC",
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
-    "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
@@ -41,12 +38,12 @@
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "^14.5.2",
+    "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
     "react-dom": "catalog:",
-    "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
@@ -55,8 +52,9 @@
     "@spp/shared-color-variant": "workspace:^",
     "@spp/ui-button-style": "workspace:^",
     "@spp/ui-loader": "workspace:^",
+    "@spp/ui-theme": "workspace:^",
     "@types/react": "catalog:",
-    "clsx": "catalog:",
+    "@vanilla-extract/css": "^1.16.0",
     "react": "catalog:"
   }
 }
