--- a/features/game/package.json
+++ b/features/game/package.json
@@ -17,8 +17,6 @@
   "scripts": {
     "build:tsc": "tsc",
     "check-type": "tsc --noEmit",
-    "build:css": "tailwindcss -i src/style.css -o dist/style.css",
-    "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
     "dev:build:tsc": "tsc --watch --noEmit --preserveWatchOutput",
     "test": "vitest run",
     "dev:test": "vitest watch",
@@ -33,7 +31,6 @@
   "license": "ISC",
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
-    "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
@@ -43,13 +40,13 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "catalog:",
     "@types/sinon": "catalog:",
+    "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
     "react-dom": "catalog:",
     "sinon": "catalog:",
-    "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
@@ -57,13 +54,15 @@
   "dependencies": {
     "@spp/infra-domain": "workspace:^",
     "@spp/shared-app-url": "workspace:^",
+    "@spp/shared-color-variant": "workspace:^",
     "@spp/shared-domain": "workspace:^",
     "@spp/shared-hook-facade": "workspace:^",
     "@spp/shared-use-case": "workspace:^",
     "@spp/ui-button-style": "workspace:^",
     "@spp/ui-dialog": "workspace:^",
     "@spp/ui-loader": "workspace:^",
-    "clsx": "catalog:",
+    "@spp/ui-theme": "workspace:^",
+    "@vanilla-extract/css": "^1.16.0",
     "jotai": "^2.10.0",
     "react": "catalog:",
     "react-router-dom": "catalog:"
