[wip] refactor: rewrite styles with vanilla-extract

--- a/features/voting/package.json
+++ b/features/voting/package.json
@@ -17,9 +17,7 @@
   "scripts": {
     "build:tsc": "tsc",
     "check-type": "tsc --noEmit",
-    "build:css": "tailwindcss -i src/style.css -o dist/style.css",
-    "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
-    "dev:build:tsc": "tsc --watch --noEmit --preserveWatchOutput",
+      "dev:build:tsc": "tsc --watch --noEmit --preserveWatchOutput",
     "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
@@ -33,8 +31,7 @@
   "license": "ISC",
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
-    "@spp/tailwind-config": "workspace:^",
-    "@spp/typescript-config": "workspace:^",
+      "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
@@ -43,6 +40,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "catalog:",
     "@types/sinon": "catalog:",
+    "@vanilla-extract/vite-plugin": "^4.0.16",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -50,7 +48,6 @@
     "jsdom": "catalog:",
     "react-dom": "catalog:",
     "sinon": "catalog:",
-    "tailwindcss": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
@@ -65,8 +62,9 @@
     "@spp/ui-button-style": "workspace:^",
     "@spp/ui-icon": "workspace:^",
     "@spp/ui-skeleton": "workspace:^",
+    "@spp/ui-theme": "workspace:^",
     "@spp/ui-toggle-button": "workspace:^",
-    "clsx": "catalog:",
+    "@vanilla-extract/css": "^1.16.0",
     "jotai": "^2.10.0",
     "react": "catalog:"
   }
