--- a/packages/infra/domain/package.json
+++ b/packages/infra/domain/package.json
@@ -33,16 +33,15 @@
     "@firebase/rules-unit-testing": "catalog:",
     "@spp/eslint-config": "workspace:^",
     "@spp/shared-get-pnpm-root": "workspace:^",
-    "@spp/tailwind-config": "workspace:^",
-    "@spp/typescript-config": "workspace:^",
-    "@types/uuid": "^10.0.0",
+      "@spp/typescript-config": "workspace:^",
+      "@types/uuid": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "firebase-tools": "catalog:",
-    "immer": "^10.0.3",
+      "immer": "catalog:",
     "typescript": "catalog:",
-    "uuid": "^10.0.0",
+      "uuid": "catalog:",
     "vite": "catalog:",
     "vitest": "catalog:"
   },
