--- a/packages/ui/icon/package.json
+++ b/packages/ui/icon/package.json
@@ -36,8 +36,8 @@
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@types/react": "catalog:",
-    "@vanilla-extract/css": "^1.16.0",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
+    "@vanilla-extract/css": "catalog:",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
