--- a/features/game/package.json
+++ b/features/game/package.json
@@ -37,10 +37,10 @@
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
-    "@testing-library/user-event": "^14.5.2",
+      "@testing-library/user-event": "catalog:",
     "@types/react": "catalog:",
     "@types/sinon": "catalog:",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -62,8 +62,8 @@
     "@spp/ui-dialog": "workspace:^",
     "@spp/ui-loader": "workspace:^",
     "@spp/ui-theme": "workspace:^",
-    "@vanilla-extract/css": "^1.16.0",
-    "jotai": "^2.10.0",
+    "@vanilla-extract/css": "catalog:",
+      "jotai": "catalog:",
     "react": "catalog:",
     "react-router-dom": "catalog:"
   }
