--- a/packages/infra/authenticator/package.json
+++ b/packages/infra/authenticator/package.json
@@ -53,6 +53,6 @@
   "dependencies": {
     "@spp/shared-domain": "workspace:^",
     "firebase": "catalog:",
-    "uuid": "^10.0.0"
+      "uuid": "catalog:"
   }
 }
