--- a/packages/shared-logic/domain/package.json
+++ b/packages/shared-logic/domain/package.json
@@ -47,8 +47,8 @@
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@types/crypto-js": "^4.2.2",
-    "@types/uuid": "^10.0.0",
+      "@types/crypto-js": "catalog:",
+      "@types/uuid": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "typescript": "catalog:",
@@ -58,8 +58,8 @@
   "dependencies": {
     "@spp/shared-array": "workspace:^",
     "@spp/shared-basic": "workspace:^",
-    "crypto-js": "^4.2.0",
-    "immer": "^10.0.3",
-    "uuid": "^10.0.0"
+      "crypto-js": "catalog:",
+      "immer": "catalog:",
+      "uuid": "catalog:"
   }
 }
