--- a/packages/shared-logic/get-pnpm-root/package.json
+++ b/packages/shared-logic/get-pnpm-root/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
-    "@types/node": "^22.5.5",
+      "@types/node": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "typescript": "catalog:",
@@ -31,6 +31,6 @@
     "vitest": "catalog:"
   },
   "dependencies": {
-    "@pnpm/find-workspace-dir": "^7.0.1"
+      "@pnpm/find-workspace-dir": "catalog:"
   }
 }
