--- a/packages/ui/dialog/package.json
+++ b/packages/ui/dialog/package.json
@@ -37,8 +37,8 @@
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
-    "@testing-library/user-event": "^14.5.2",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
+      "@testing-library/user-event": "catalog:",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -54,7 +54,7 @@
     "@spp/ui-loader": "workspace:^",
     "@spp/ui-theme": "workspace:^",
     "@types/react": "catalog:",
-    "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/css": "catalog:",
     "react": "catalog:"
   }
 }
