--- a/packages/ui/overlay/package.json
+++ b/packages/ui/overlay/package.json
@@ -38,7 +38,7 @@
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
     "@types/react": "catalog:",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "@spp/ui-theme": "workspace:^",
-    "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/css": "catalog:",
     "react": "catalog:"
   }
 }
