--- a/packages/ui/radio-button/package.json
+++ b/packages/ui/radio-button/package.json
@@ -39,7 +39,7 @@
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "catalog:",
-    "@vanilla-extract/vite-plugin": "^4.0.16",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@spp/ui-theme": "workspace:^",
-    "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/css": "catalog:",
     "react": "catalog:"
   }
 }
