--- a/packages/ui/toggle-button/package.json
+++ b/packages/ui/toggle-button/package.json
@@ -18,8 +18,6 @@
     "check-type": "tsc --noEmit",
     "build:tsc": "tsc",
     "dev:build:tsc": "tsc --watch --noEmit",
-    "build:css": "tailwindcss -i src/style.css -o dist/style.css",
-    "dev:build:css": "tailwindcss --watch -i src/style.css -o dist/style.css",
     "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
@@ -33,26 +31,27 @@
   "license": "ISC",
   "devDependencies": {
     "@spp/eslint-config": "workspace:^",
-    "@spp/tailwind-config": "workspace:^",
     "@spp/typescript-config": "workspace:^",
     "@storybook/addon-controls": "catalog:",
     "@storybook/cli": "catalog:",
     "@storybook/react": "catalog:",
     "@storybook/react-vite": "catalog:",
     "@testing-library/react": "catalog:",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/user-event": "catalog:",
     "@types/react": "catalog:",
+    "@vanilla-extract/vite-plugin": "catalog:",
     "@vitejs/plugin-react": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "jsdom": "catalog:",
-    "tailwindcss": "catalog:",
+    "react-dom": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
-    "vitest": "catalog:",
-    "react-dom": "catalog:"
+    "vitest": "catalog:"
   },
   "dependencies": {
+    "@spp/ui-theme": "workspace:^",
+    "@vanilla-extract/css": "catalog:",
     "clsx": "catalog:",
     "react": "catalog:"
   }
