--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,30 +11,40 @@ catalog:
   "@vitejs/plugin-react": 4.3.1
   jsdom: 25.0.1
   "@testing-library/react": 16.0.1
+  "@testing-library/user-event": 14.5.2
   react: 18.3.1
   react-dom: 18.3.1
-  react-router-dom: "^6.26.2"
-  "@storybook/addon-controls": "^8.3.3"
-  "@storybook/cli": "^8.3.3"
-  "@storybook/react": "^8.3.3"
-  "@storybook/react-vite": "^8.3.3"
+  react-router-dom: 6.26.2
+  "@storybook/addon-controls": 8.3.3
+  "@storybook/cli": 8.3.3
+  "@storybook/react": 8.3.3
+  "@storybook/react-vite": 8.3.3
   tailwindcss: 3.4.13
-  "eslint": "^9.11.0"
-  "eslint-config-prettier": "^9.1.0"
-  "eslint-plugin-react": "^7.37.0"
-  "eslint-plugin-unused-imports": "^4.1.4"
-  "typescript-eslint": "^8.7.0"
-  "concurrently": "9.0.1"
-  "jotai": "2.9.3"
-  "@types/react": "^18.3.10"
-  "@types/react-dom": "^18.2.18"
-  "@types/react-router": "^5.1.20"
-  "@types/react-router-dom": "^5.3.3"
-  "@types/react-transition-group": "^4.4.10"
-  "sinon": "19.0.2"
-  "@types/sinon": "^17.0.3"
-  typescript: "5.6.2"
-  firebase-tools: "^13.20.1"
-  firebase: "^10.13.2"
-  "@firebase/rules-unit-testing": "^3.0.1"
-  '@dotenvx/dotenvx': "^1.14.1"
+  "eslint": 9.13.0
+  "eslint-config-prettier": 9.1.0
+  "eslint-plugin-react": 7.37.0
+  "eslint-plugin-unused-imports": 4.1.4
+  "typescript-eslint": 8.7.0
+  "concurrently": 9.0.1
+  "jotai": 2.9.3
+  "@types/react": 18.3.10
+  "@types/react-dom": 18.2.18
+  "@types/react-router": 5.1.20
+  "@types/react-router-dom": 5.3.3
+  "@types/react-transition-group": 4.4.10
+  "sinon": 19.0.2
+  "@types/sinon": 17.0.3
+  '@types/node': 22.5.5
+  typescript: 5.6.2
+  firebase-tools: 13.20.1
+  firebase: 10.13.2
+  "@firebase/rules-unit-testing": 3.0.1
+  '@dotenvx/dotenvx': 1.14.1
+  'crypto-js': 4.2.0
+  '@types/crypto-js': 4.2.2
+  immer: 10.0.3
+  uuid: 10.0.0
+  "@types/uuid": 10.0.0
+  "@pnpm/find-workspace-dir": 7.0.1
+  '@vanilla-extract/css': 1.16.0
+  '@vanilla-extract/vite-plugin': 4.0.16
