--- a/packages/ui/icon/package.json
+++ b/packages/ui/icon/package.json
@@ -19,8 +19,8 @@
     "build:tsc": "tsc",
     "dev:build:tsc": "tsc --watch --noEmit",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "dev:storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
+    "dev:storybook": "storybook dev --disable-telemetry -p 6006",
+    "build:storybook": "storybook build --disable-telemetry",
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "build": "concurrently \"pnpm:build:*\""
   },
