--- a/packages/ui/radio-button/package.json
+++ b/packages/ui/radio-button/package.json
@@ -21,8 +21,8 @@
       "test": "vitest run",
     "dev:test": "vitest watch",
     "lint": "eslint --cache --cache-location=node_modules/.cache/eslint --fix src/",
-    "dev:storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build",
+    "dev:storybook": "storybook dev --disable-telemetry -p 6006",
+    "build:storybook": "storybook build --disable-telemetry",
     "dev": "concurrently --raw --kill-others --handle-input \"pnpm:dev:*\"",
     "build": "concurrently \"pnpm:build:*\""
   },
